<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:clickable="false"
    android:background="#000000"
    android:padding="20dp">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:id="@+id/imageView2"
        android:src="@drawable/hearthstone_logo"
        android:contentDescription="@string/logo_img"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id = "@+id/look_cards_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/action_look_cards"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_margin="5dp" />

    <Button
        android:id = "@+id/look_decks_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/action_look_decks"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/roga_bottom"
        android:contentDescription="@string/logo_img"
        android:layout_gravity="center_horizontal"
/>


</LinearLayout>
