<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="www.hearthstonewiki.gui.fragments.HeroInfoFragment"
    android:background="@drawable/bg_hunter"
    android:id="@+id/heroInfoScrollView">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heroImageView"
            android:src="@drawable/hero_warrior"
            android:layout_gravity="center_horizontal|top"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            android:contentDescription="@string/hero_ava"
            android:adjustViewBounds="true"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/abilityImageView"
            android:src="@drawable/hero_paladin"
            android:layout_gravity="center_horizontal|top"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            android:contentDescription="@string/hero_ability"
            android:adjustViewBounds="true"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/priest_description"
        android:id="@+id/heroStoryTextView"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:background="#66c0c0c0" />

    </LinearLayout>

</ScrollView>
